change photo portfolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a class="apresentacao__links__link" href="https://github.com/RodrigoRigueira">GitHub</a>
             </div>
         </section>        
-        <img src="Chrollo.jpg" alt="Foto Perfil">
+        <img src="Rodrigo Rigueira.jpg" alt="Foto Perfil">
     </main>
     <footer></footer>    
 </body>
