--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Rodrigo Rigueira, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://github.com/RodrigoRigueira">
+                <a class="apresentacao__links__link" href="https://github.com/RodrigoRigueira" target="_blank">
                     <img src="./assets/github.png">     
                     Github
                 </a>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/rodrigo-rigueira-193488274/">
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/rodrigo-rigueira-193488274/" target="_blank">
                     <img src="./assets/linkedin.png">     
                     Linkedin
                 </a>
-                <a class="apresentacao__links__link" href="https://Instagram.com/rodrigo_rigueiraa">
+                <a class="apresentacao__links__link" href="https://Instagram.com/rodrigo_rigueiraa" target="_blank">
                     <img src="./assets/instagram.png">     
                     Instagram
                 </a>
